infrastructure/longhorn-system/longhorn/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster
    gethomepage.dev/name: Longhorn
    gethomepage.dev/description: Distributed storage dashboard
    gethomepage.dev/pod-selector: app=longhorn-ui
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts:
        - longhorn.int.harville.dev
  rules:
    - host: longhorn.int.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
